# be-rest-test-rs

./: Cargo.toml  README.md  Rocket.toml  docker-compose.yml
src/: main.rs
src/models/: mod.rs  scheduler.rs  storage.rs
src/models/lightbulb/: api.rs  mod.rs  storage.rs
src/models/schedule/: api.rs  mod.rs  storage.rs
src/routes/: lightbulb.rs  mod.rs  schedule.rs
src/services/: mongodb.rs
